memes-generator2/network/templates/security-groups.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Security groups for applications 

Parameters:
  Project:
    Description: Project name
    Type: String
    AllowedPattern: ^[a-z][a-zA-Z0-9-]{3,20}$
  Component:
    Description: Name of the component
    Type: String
    AllowedPattern: ^[a-z][a-zA-Z0-9-]{2,15}$
  Stage:
    Description: Stage name
    Type: String
    AllowedPattern: ^[a-z][a-zA-Z0-9-]{2,15}$

  #   
  JumpHostAllowedCidrIpBlock:
    Description: CidrIp Block which will be have access open to JumpHost
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    Type: String
  ApplicationPort:
    Description: Port for API Application
    Type: String
  DatabasePort:
    Description: Port for Database
    Type: String


  # data taken from Storage Parameters
  VpcId:
    Description: Reference of the VpcId from the SSM
    Type: AWS::SSM::Parameter::Value<String>


Resources:
  JumpHostSecurityGroup:
   Type: AWS::EC2::SecurityGroup
   Properties:
     GroupDescription: SecurityGroup for JumpHost
     GroupName: !Sub ${Project}-${Stage}-${Component}-jumphost-sg
     VpcId: !Ref VpcId
     SecurityGroupIngress:
       -  IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref JumpHostAllowedCidrIpBlock        
     Tags:
       - Key: Name
         Value: !Sub ${Project}-${Stage}-${Component}-jumphost-sg

  JumpHostSecurityGroupParam:
    Type: AWS::SSM::Parameter
    Properties:
      Type: String 
      Description: !Sub Stores ${Project}-${Stage}-${Component} Jump host security Group
      Name: !Sub /${Project}/${Stage}/${Component}/jumphost-sg/sg-id
      Tier: Standard
      Value: !Ref JumpHostSecurityGroup
      Tags:
        Name: !Sub ${Project}-${Stage}-${Component}-vpc-id

  AlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for Alb
      GroupName: !Sub ${Project}-${Stage}-${Component}-alb-sg 
      SecurityGroupIngress:
       - IpProtocol: tcp
         FromPort: 80
         ToPort: 80
         CidrIp: 0.0.0.0/0
       - IpProtocol: tcp
         FromPort: 443
         ToPort: 443
         CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${Project}-${Stage}-${Component}-alb-sg
      VpcId: !Ref VpcId

  ApplicationSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${Project}-${Stage}-${Component}-application-sg
      GroupDescription: SecurityGroup for Application
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref ApplicationPort
          ToPort: !Ref ApplicationPort
          SourceSecurityGroupId: !Ref AlbSecurityGroup
        - IpProtocol: tcp
          FromPort: !Ref ApplicationPort
          ToPort: !Ref ApplicationPort
          SourceSecurityGroupId: !Ref JumpHostSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${Project}-${Stage}-${Component}-application-sg   

  DataBaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup for Database
      GroupName: !Sub ${Project}-${Stage}-${Component}-database-sg
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref DatabasePort
          ToPort: !Ref DatabasePort
          SourceSecurityGroupId: !Ref JumpHostSecurityGroup
        - IpProtocol: tcp
          FromPort: !Ref DatabasePort
          ToPort: !Ref DatabasePort
          SourceSecurityGroupId: !Ref ApplicationSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${Project}-${Stage}-${Component}-database-sg
      VpcId: !Ref VpcId

  DataBaseSecurityGroupParam:
    Type: AWS::SSM::Parameter
    Properties:
      Type: String 
      Description: !Sub Stores ${Project}-${Stage}-${Component} Database security Group
      Name: !Sub /${Project}/${Stage}/${Component}/database-sg/sg-id
      Tier: Standard
      Value: !Ref DataBaseSecurityGroup
      Tags:
        Name: !Sub ${Project}-${Stage}-${Component}-database-id
    
# Outputs:
